# galder-game-jam-2023

./: .gitignore  CMakeLists.txt  LICENSE  README.md
content/game/content/maps/: finalmap.json  map1.json  map3.json  map4.json
external_libs/GameNetworkingSockets/: CMakeLists.txt
external_libs/box2d/: CMakeLists.txt
src/: CMakeLists.txt
src/experiments/: main.cpp
src/galder-game-jam-2023/: main.cpp
src/galder-game-jam-library/: CMakeLists.txt  GalderGameJamLibrary.h
src/galder-game-jam-library/data/: PlayerNetworkData.hpp  ServerNetworkData.hpp
src/galder-game-jam-library/enums/: AnimationName.h  ObjectType.h  ResourceName.h  TextureName.h
src/galder-game-jam-library/game/: Hitbox.hpp  Player.cpp  Player.h  Player2.cpp  Player2.h
src/galder-game-jam-library/graphics/: PhysicsObject.h
src/galder-game-jam-library/managers/: AnimationManager.cpp  ResourceManager.hpp  WorldManager.cpp
src/galder-game-jam-library/network/: GalderClient.cpp  GalderClient.h  GalderClient.hpp  GalderServer.cpp  GalderServer.h  GalderServer.hpp
src/galder-game-jam-library/system/: Mapper.hpp  World.cpp  World.h  WorldLayer.cpp
src/gamedev-base/: CMakeLists.txt  GameDevBase.h
src/gamedev-base/data/: ClientInfo.hpp  IpAddress.hpp  ServerHostInfo.hpp
src/gamedev-base/enums/: ConnectionStatus.h
src/gamedev-base/network/: Client.cpp  Client.h  Client.hpp  IpAddressResolver.cpp  IpAddressResolver.h  Server.cpp  Server.h  Server.hpp  StringTrim.hpp
src/ggj-client/: CMakeLists.txt  main.cpp
src/ggj-server/: CMakeLists.txt  main.cpp
(+9 files in other folders)
